fix: align user icon in signature component try 2

--- a/frontend/src/Components/SignatureComponent.module.scss
+++ b/frontend/src/Components/SignatureComponent.module.scss
@@ -26,7 +26,6 @@
     color: var(--fgMedium);
     &:before {
       color: var(--fgMedium);
-      margin-top: -2px;
     }
     &:hover {
       color: var(--primary);
